processed/jira/txt/LU/LU-15973.txt
Key:        LU-15973
Summary:    RHEL 8.6 build failed with MLNX_OFED 5.6-2.0.9.0
Link:       https://jira.whamcloud.com/browse/LU-15973
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Mon, 27 Jun 2022 17:48:33 +0000
Updated:    Tue, 12 Jul 2022 06:54:36 +0000
Resolved:   Wed, 6 Jul 2022 13:12:08 +0000

--- Description ---
Build failures are:

In file included from mlx/BUILD/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/x86_64/4.18.0-372.9.1.el8.x86_64/include/linux/compiler.h:6,
                 from include/linux/rh_kabi.h:30,
                 from include/linux/uio.h:12,
                 from include/linux/socket.h:8,
                 from ./include/uapi/linux/if.h:25,
                 from mlx/BUILD/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/x86_64/4.18.0-372.9.1.el8.x86_64/include/linux/compat-2.6.h:11,
                 from :
include/linux/sched/signal.h: In function 'kernel_signal_stop':
/tmp/rpmbuild-lustre-jenkins-TRUIEaHb/BUILD/lustre-2.14.0_ddn48/config.h:1072:17: error: 'struct task_struct' has no member named 'state'; did you mean '__state'?
 #define __state state
                 ^~~~~    
include/linux/compiler.h:354:17: note: in definition of macro 'WRITE_ONCE'
  union { typeof(x) __val; char __c[1]; } __u = \
                 ^        
include/linux/sched.h:223:23: note: in expansion of macro '__state'
   WRITE_ONCE(current->__state, (state_value));  \
                       ^~~~~~~  
include/linux/sched/signal.h:312:3: note: in expansion of macro 'set_special_state'
   set_special_state(TASK_STOPPED);
   ^~~~~~~~~~~~~~~~~

The failures are introduced from the lustre/autoconf/lustre-core.m4 changes in https://review.whamcloud.com/47192.

--- Comment (gerrit, Tue, 12 Jul 2022 06:54:36 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/47935

Subject: LU-15973 build: remove AC_DEFINE(__state, state, ...)

Project: fs/lustre-release

Branch: b2_14

Current Patch Set: 1

Commit: f75fc4f672f1f24e048735f94478da25f06dabd5

--- Comment (gerrit, Wed, 6 Jul 2022 03:43:39 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/47807/

Subject: LU-15973 build: remove AC_DEFINE(__state, state, ...)

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 

Commit: e226161d9fe08af8b5bd1ff612b3a0945c98c5f5

--- Comment (gerrit, Wed, 6 Jul 2022 03:35:16 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/47799/

Subject: LU-15973 build: remove AC_DEFINE(__state, state, ...)

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: f4c65e01a2e58b2bae770770590494d85ef636f7

--- Comment (gerrit, Tue, 28 Jun 2022 07:38:51 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/47807

Subject: LU-15973 build: remove AC_DEFINE(__state, state, ...)

Project: fs/lustre-release

Branch: b2_15

Current Patch Set: 1

Commit: 673664060a69e133e3279273a190fbc27fe0f03f

--- Comment (gerrit, Mon, 27 Jun 2022 18:03:27 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/47799

Subject: LU-15973 build: remove AC_DEFINE(__state, state, ...)

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 66c98e324b0182e781743cab4e938b18b6ef4255
